2011-01-14  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Adam Roben.

        Issues with contentsScale in GraphicsLayerCA
        https://bugs.webkit.org/show_bug.cgi?id=52463

        Fix various issues with the recent contentsScale changes:

        * platform/graphics/ca/GraphicsLayerCA.cpp:
        (WebCore::GraphicsLayerCA::GraphicsLayerCA): Initialize m_contentsScale to 1.
        (WebCore::GraphicsLayerCA::updateContentsScale): Only do a setNeedsDisplay()
        if the layer draws content, otherwise we'll create backing store for empty layers.
        (WebCore::GraphicsLayerCA::swapFromOrToTiledLayer): Be sure to set contentsScale
        on the new (tiled or untiled) layer.
        (WebCore::GraphicsLayerCA::cloneLayer): Clones need contentsScale too.

2011-01-14  Simon Fraser  <simon.fraser@apple.com>

        Let Xcode have it's way with the project file.

        * WebCore.xcodeproj/project.pbxproj:

2011-01-14  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson.

        Refactor some FrameView::syncCompositingState code
        https://bugs.webkit.org/show_bug.cgi?id=52459

        Refactor some code in FrameView related to synchronizing
        compositing layer state.
        
        * page/FrameView.cpp:
        (WebCore::FrameView::syncCompositingStateForThisFrame):
        (WebCore::FrameView::syncCompositingStateRecursive):
        (WebCore::FrameView::paintContents):
        * page/FrameView.h:

2011-01-14  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Fix build problem introduced by http://trac.webkit.org/changeset/75713
        https://bugs.webkit.org/show_bug.cgi?id=30179

        * plugins/symbian/PluginViewSymbian.cpp:

2011-01-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add volume slider to media player
        https://bugs.webkit.org/show_bug.cgi?id=51532
