@@ -1,3 +1,11 @@
+2011-01-14  Pavel Feldman  <pfeldman@chromium.org>
+
+        Not reviewed. Follow up to r75791: fix missing dispatch.
+        https://bugs.webkit.org/show_bug.cgi?id=52442
+
+        * inspector/front-end/DebuggerModel.js:
+        (WebInspector.DebuggerDispatcher.prototype.breakpointResolved):
+
 2011-01-14  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Adam Roben.
